--- a/publico/css/competicion.css
+++ b/publico/css/competicion.css
@@ -1,457 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
-
-html{
-    box-sizing: border-box;/*hack para box model*/
-}
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-
-body{
-    /*background-image: url("img/cesped.png"); /*incluyo una imágen de fondo en el body*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Merriweather', sans-serif;
-    background-color: #22272B;
-}
-
-video{
-    position: absolute;
-    top: 10%;
-    left:0;
-    right:0;
-    transform: translateY(-50%);
-    width: 100%;
-}
-.texto{
-    width: 80%;
-    position: absolute;
-    top: 10%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: space-between;
-}
-
-.texto span{
-    text-align: center;
-    font-weight: 800;
-    font-size: 5rem;
-    color:#777;
-    transition: 1s;
-    -webkit-transition: 1s;
-    -moz-transition: 1s;
-    animation: reveal 2.5s linear forwards;
-    opacity: 0;
-}
-
-@keyframes reveal{
-    100%{
-        opacity: 1;
-        filter: blur(0);
-    }
-}
-span:nth-child(1){
-    animation-delay: 0.7s;
-    -webkit-animation-delay: 0.7s;
-    -moz-animation-delay: 0.7s;
-}
-span:nth-child(2){
-    animation-delay: 1.4s;
-    -webkit-animation-delay: 1.4s;
-    -moz-animation-delay: 1.4s;
-}
-span:nth-child(3){
-    animation-delay: 2.1s;
-    -webkit-animation-delay: 2.1s;
-    -moz-animation-delay: 2.1s;
-}
-span:nth-child(4){
-    animation-delay: 2.8s;
-    -webkit-animation-delay: 2.8s;
-    -moz-animation-delay: 2.8s;
-}
-span:nth-child(5){
-    animation-delay: 3.5s;
-    -webkit-animation-delay: 3.5s;
-    -moz-animation-delay: 3.5s;
-}
-span:nth-child(6){
-    animation-delay: 4.2s;
-    -webkit-animation-delay: 4.2s;
-    -moz-animation-delay: 4.2s;
-}
-span:nth-child(7){
-    animation-delay: 4.9s;
-    -webkit-animation-delay: 4.9s;
-    -moz-animation-delay: 4.9s;
-}
-span:nth-child(8){
-    animation-delay: 5.6s;
-    -webkit-animation-delay: 5.6s;
-    -moz-animation-delay: 5.6s;
-}
-span:nth-child(9){
-    animation-delay: 6.3s;
-    -webkit-animation-delay: 6.3s;
-    -moz-animation-delay: 6.3s;
-}
-span:nth-child(10){
-    animation-delay: 7s;
-    -webkit-animation-delay: 7s;
-    -moz-animation-delay: 7s;
-}
-span:nth-child(11){
-    animation-delay: 7.7s;
-    -webkit-animation-delay: 7.7s;
-    -moz-animation-delay: 7.7s;
-}
-
-.casa__contenedor{
-    width: 40px;
-    height: 40px;
-    z-index: 100;
-}
-.casa{
-    color: #000;
-}
-.contenedor{
-    width: 100%;
-    height: calc(100vh - 900px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 10;
-}
-
-.borde{
-    width: 100%;
-    border: 1px solid black;
-    margin-bottom: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    border-radius: .5rem;
-}
-
-label{
-    font-size: 4rem;
-    width: 200px;
-}
-#elegir{
-    font-size: 3rem;
-    border-radius: .5rem;
-}
-option{
-    margin-bottom: 0;
-}
-button{
-    border-radius: 8px;
-    font-size: 2rem;
-    padding: 1rem 2rem;
-    cursor: pointer;/*cambia el formato del cursor al situar el ratón encima*/
-    
-}
-
-#reiniciar{
-    margin-left: cal(50% - 100px);
-    display: none;
-    background-color: #000;
-    color:#fff
-}
-.coche{
-    display: none;
-}
-
-#pista {
-    position: relative;
-    height: 340px;
-    display: none;
-    width: 900px;
-    border:1px solid black; 
-    box-shadow: 10px 5px 5px  rgb(78, 72, 78);
-    border-radius: 8px;
-    margin:0 auto;
-    background-image: url("../imagenes/competicion/pista.jpg");
-    background-size:contain;
-}
-#participantes{
-   text-align: center;
-   margin-bottom: 5px;
-   margin-left: 15px;
-   font-size: 3rem;
-}
-.ganador{
-    position: absolute;
-    color:#000;
-    font-size: 2rem;
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 1rem;
-    border:1px solid #000;
-    top:120px;
-    left:calc(481px - 176px);
-}
-
-img {
-    padding: 3px;
-    margin-top: 60px;
-  }
-
-p{
-    margin-bottom: 5px;
-}
-#coche1{
-    position: absolute;
-    top:-65px;
-}
-#coche2{
-    position: absolute;
-    top:12px;
-}
-#coche3{
-    position: absolute;
-    top:130px;
-}
-#coche4{
-    position: absolute;
-    top:180px;
-}
-/*RUEDAS*/
-#ruedaCoche11{
-    position: absolute;
-    top:-20px;
-    left:19px;
-}
-#ruedaCoche12{
-    position: absolute;
-    top:-20px;
-    left:146px;
-}
-#ruedaCoche21{
-    position: absolute;
-    top:61px;
-    left:25px;
-}
-#ruedaCoche22{
-    position: absolute;
-    top:61px;
-    left:149px;
-}
-#ruedaCoche31{
-    position: absolute;
-    top:144px;
-    left:20px;
-}
-#ruedaCoche32{
-    position: absolute;
-    top:147px;
-    left:141px;
-}
-#ruedaCoche41{
-    position: absolute;
-    top:226px;
-    left:29px;
-}
-#ruedaCoche42{
-    position: absolute;
-    top:227px;
-    left:136px;
-}
-
-.ocultarRuedas{
-    opacity: 0;
-}
-
-
-.rueda__animacion__delante{
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-duration: .8s;
-    animation-name: delante
-}
-.rueda__animacion__detras{
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-duration: .8s;
-    animation-name: detras
-}
-
-@keyframes delante{
-    0% {
-        transform: rotate(0deg)
-    } to {
-        transform: rotate(1turn)
-    }
-}
-
-@keyframes detras{
-    0% {
-        transform: rotate(0deg)
-    } to {
-        transform: rotate(-1turn)
-    }
-}
-
-@media (max-width:800px) and (max-height:1200px){
-    .contenedor{
-        height: auto;
-    }
-    .borde{
-        margin-top: 19rem;
-        
-    }
-    label{
-        font-size: 1.5rem;
-    }
-    #elegir{
-        font-size: 1.5rem;
-    }
-    #iniciar, #reiniciar{
-        padding: .5rem;
-        font-size: 1.5rem;
-    }
-    #participantes{
-        font-size: 1.5rem;
-    }
-}
-
-@media (max-width:1200px) and (max-height:800px){
-    .contenedor{
-        height: auto;
-    }
-    .borde{
-        margin-top: 19rem;
-    }
-    label{
-        font-size: 1.5rem;
-    }
-    #elegir{
-        font-size: 1.5rem;
-    }
-    #iniciar, #reiniciar{
-        padding: .5rem;
-        font-size: 1.5rem;
-    }
-    #participantes{
-        font-size: 1.5rem;
-    }
-}
-
-@media (min-width:1100px) and (max-width:1380px){
-    .contenedor{
-        height: auto;
-    }
-    .borde{
-        margin-top: 19rem;
-    }
-    #pista{
-        width: 1200px;
-        height: 450px;
-    }
-    label{
-        font-size: 1.5rem;
-    }
-    #elegir{
-        font-size: 1.5rem;
-    }
-    #iniciar, #reiniciar{
-        padding: .5rem;
-        font-size: 1.5rem;
-    }
-    #participantes{
-        font-size: 1.5rem;
-    }
-    #coche1{
-        position: absolute;
-        top:-40px;
-    }
-    #coche2{
-        position: absolute;
-        top:65px;
-    }
-    #coche3{
-        position: absolute;
-        top:200px;
-    }
-    #coche4{
-        position: absolute;
-        top:280px;
-    }
-    /*RUEDAS*/
-    #ruedaCoche11{
-        position: absolute;
-        top:4px;
-        left:19px;
-    }
-    #ruedaCoche12{
-        position: absolute;
-        top:5px;
-        left:146px;
-    }
-    #ruedaCoche21{
-        position: absolute;
-        top:115px;
-        left:25px;
-    }
-    #ruedaCoche22{
-        position: absolute;
-        top:115px;
-        left:149px;
-    }
-    #ruedaCoche31{
-        position: absolute;
-        top:212px;
-        left:20px;
-    }
-    #ruedaCoche32{
-        position: absolute;
-        top:215px;
-        left:141px;
-    }
-    #ruedaCoche41{
-        position: absolute;
-        top:326px;
-        left:29px;
-    }
-    #ruedaCoche42{
-        position: absolute;
-        top:326px;
-        left:136px;
-    }
-}
-
-@media (min-width:1381px){
-    .contenedor{
-        height: auto;
-    }
-    .borde{
-        margin-top: 15rem;  
-    }
-    #pista{
-        width: 1200px;
-    }
-    label{
-        font-size: 1.5rem;
-    }
-    #elegir{
-        font-size: 1.5rem;
-    }
-    #iniciar, #reiniciar{
-        padding: .5rem;
-        font-size: 1.5rem;
-    }
-    #participantes{
-        font-size: 1.5rem;
-    }
-}
-
-
-
-
-
-
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}body{position:relative;font-family:'Merriweather',sans-serif;background-color:#22272B}.fondo__titulo{position:absolute;top:80px;width:100%;display:flex;justify-content:center;align-items:center}video{width:100%;max-height:15rem;min-height:9rem;animation:outVideo 2s linear forwards;-webkit-animation:outVideo 3s linear forwards}.texto{width:80%;position:absolute;top:15%;left:50%;transform:translate(-50%,-50%);display:flex;justify-content:space-between;z-index:10}.texto span{text-align:center;font-weight:800;font-size:2rem;color:#777;transition:.5s;animation:reveal 2.5s linear forwards;opacity:0}@keyframes outVideo{100%{opacity:0}}@keyframes reveal{100%{opacity:1;filter:blur(0)}}span:nth-child(1){animation-delay:.3s}span:nth-child(2){animation-delay:.6s}span:nth-child(3){animation-delay:.9s}span:nth-child(4){animation-delay:1.2s}span:nth-child(5){animation-delay:1.5s}span:nth-child(6){animation-delay:1.7s}span:nth-child(7){animation-delay:1.8s}span:nth-child(8){animation-delay:1.9s}span:nth-child(9){animation-delay:2s}span:nth-child(10){animation-delay:2.1s}span:nth-child(11){animation-delay:2.1s}.contenedor{width:100%}.borde{width:100%;border:1px solid black;margin-bottom:2rem;display:flex;flex-direction:column;justify-content:start;background-color:#fff;border-radius:.5rem}.casa__contenedor{margin:0 auto;width:40px;height:40px;margin-bottom:.5rem;z-index:100}.casa{color:#000}label{display:inline-block;font-size:.8rem;width:200px}option{margin-bottom:0}.botones{display:flex;justify-content:center}button{border-radius:8px;font-size:.9rem;padding:.5rem 1rem;cursor:pointer}input,select{border:1px solid #000;border-radius:.2rem;font-size:1rem;max-width:6rem;margin-bottom:.5rem}p{text-align:center;font-size:.8rem}#reiniciar{margin-left:cal(50% - 100px);display:none;background-color:#000;color:#fff}.coche{display:none}.pista1,.pista2,.pista3,.pista4{position:relative;display:none;width:100%;max-width:1200px;min-height:5rem;margin-bottom:3rem;border:1px solid black;box-shadow:10px 5px 5px rgb(78,72,78);border-radius:8px;margin:0 auto;background-image:url("../imagenes/competicion/pista.avif");background-size:cover;background-repeat:no-repeat}#participantes{text-align:center;margin-bottom:5px;margin-left:15px;font-size:.8rem}.ganador{position:absolute;margin:0 auto;left:0;right:0;width:14rem;color:#000;font-size:1rem;background-color:#fff;padding:2rem;border-radius:1rem;border:1px solid #000;z-index:10}img{padding:3px;margin-top:60px}p{margin-bottom:5px}#coche1{height:4rem;width:auto;position:absolute;top:-64px}#coche2{height:4rem;width:auto;position:absolute;top:-64px}#coche3{height:2.2rem;width:auto;position:absolute;top:-50px}#coche4{height:4rem;width:auto;position:absolute;top:-64px}#ruedaCoche11{height:1.6rem;width:auto;position:absolute;top:-34px;left:12px}#ruedaCoche12{height:1.6rem;width:auto;position:absolute;top:-34px;left:94px}#ruedaCoche21{height:1.6rem;width:auto;position:absolute;top:-34px;left:14px}#ruedaCoche22{height:1.6rem;width:auto;position:absolute;top:-34px;left:88px}#ruedaCoche31{height:1.6rem;width:auto;position:absolute;top:-39px;left:11px}#ruedaCoche32{height:1.6rem;width:auto;position:absolute;top:-38px;left:85px}#ruedaCoche41{height:1.6rem;width:auto;position:absolute;top:-36px;left:16px}#ruedaCoche42{height:1.6rem;width:auto;position:absolute;top:-36px;left:80px}.ocultarRuedas{opacity:0}.rueda__animacion__delante{animation-iteration-count:infinite;animation-timing-function:linear;animation-duration:.8s;animation-name:delante}.rueda__animacion__detras{animation-iteration-count:infinite;animation-timing-function:linear;animation-duration:.8s;animation-name:detras}@keyframes delante{0%{transform:rotate(0deg)}to{transform:rotate(1turn)}}@keyframes detras{0%{transform:rotate(0deg)}to{transform:rotate(-1turn)}}@media screen and (min-width:600px){.apuesta{display:flex;flex-direction:column}}
