--- a/publico/css/libreta.css
+++ b/publico/css/libreta.css
@@ -1,211 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');
-
-*{
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-body{
-    background-color: #9499a8;
-}
-.text-muted{
-    font-size: .9rem;
-}
-.card {
--webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px #0000001a inset;
--moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-}
-.sombraTotales{
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.5), 
-            0px 2px 4px rgba(0,0,0,0.1),
-            0px 4px 8px rgba(0,0,0,0.1),
-            0px 8px 16px rgba(0,0,0,0.1);
-}
-.sombraParcial{
-    box-shadow: -5px -5px 9px rgba(255,255,255,0.45), 5px 5px 9px rgba(94,104,121,0.3);
-}
-
-.titulos{
-    font-size: 1rem !important;
-}
-.centrarSubtitulos{
-    display: flex;
-    justify-content: center;
-}
-.subtitulos{
-    font-size: .8rem !important;
-    text-align: center;
-    margin-bottom: .2rem;
-}
-.bajarPequeno{
-    margin-bottom: .5rem;
-}
-.entradas{
-    font-size: .8rem;
-}
-.badge{
-    font-size:.5em;
-}
-.botones{
-    width: 100%;
-}
-.botonEditar, .botonBorrar{
-    width: 2rem !important;
-    height: 2rem;
-}
-.botonCancelar{
-    margin-bottom:.5rem;
-}
-.bot{
-    font-size: .9rem !important;
-}
-.list-group{
-    font-size: .9rem !important;
-}
-.movimientos{
-    font-size: 1rem;
-    text-align: center;
-    margin-top: 1rem;
-}
-.fondoTotalDiario{
-    background-color: bisque;
-}
-.fondoTotalGlobal{
-    background-color: #c32828b6;
-}
-.captchaOpcionesContenedor{
-    margin-top: 1rem;
-    display: flex;
-    justify-content: center;
-}
-.captchaAgregarContenedor{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.contenedor_casa{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: -35px;
-    margin-bottom: 10px;
-}
-.casa{
-    width: 25px;
-    height: 25px;
-    background: linear-gradient(180deg, #c32828b6, #c32828b6);
-    box-shadow: inset -8px 0 8px rgba(0, 0, 0, 0.15),
-    inset 0 -8px 8px rgba(0, 0, 0, 0.25),
-    0 0 0 2px rgba(0,0,0,0.75),
-    10px 20px 25px rgba(0, 0, 0, 0.4);
-    color:#fff;
-    user-select: none;
-    cursor: pointer;
-    font-weight: 400;
-    border-radius: 10px;
-    padding:5px;
-}
-.casa:hover{
-    color: #000;   
-}
-@media (min-width:565px) {
-    .logo{
-        font-size: 3rem;
-    }
-    .text-muted{
-        font-size: 1.5rem;
-    }
-    .contenedor_casa{
-        margin-top: -55px;
-        margin-bottom: 10px;
-    }
-    .casa{
-        width: 35px;
-        height: 35px;
-        padding: 5px;
-    }
-    .titulos{
-        font-size: 1.5rem !important;
-    }
-    .centrarSubtitulos{
-        display: flex;
-        justify-content: left;
-    }
-    .subtitulos{
-        font-size: 1.2rem !important;
-        text-align: left;
-        width: 100%;
-        margin-bottom: .5rem;
-    }
-    .bajarPequeno{
-        margin-bottom: 0;
-    }
-    .entradas{
-        font-size: 1.1rem;
-    }
-    .fecha{
-        padding-bottom: 3.4rem;
-    }
-    .botones{
-        width: 7.5rem;
-        font-size: 1.2rem;
-    }
-    .badge{
-        font-size:1.2rem;
-    }
-    .botonEditar, .botonBorrar{
-        width: 2.5rem !important;
-        height: 2.5rem;
-    }
-    .actualizarContenedor{
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .botonCancelar, .botonActualizar{
-        height: 2.5rem;
-    }
-    .botonCancelar{
-        margin-top:.55rem;
-    }
-    .bot{
-        font-size: 1.2rem !important;
-    }
-    .movimientos{
-        font-size: 1.3rem;
-    }
-    .captchaOpcionesContenedor{
-        display: flex;
-        justify-content: start;
-        width: 50%;
-    }
-    .botonGuardarContenedor{
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        width: 50%;
-    }
-    .captchaAgregarContenedor{
-        display: flex;
-        justify-content: start;
-        width: 50%;
-    }
-    .botonAgregarContenedor{
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        width: 50%;
-    }
-}
-
-/*HORIZONTAL*/
-@media(max-height:500px) and (orientation:landscape){
-    .contenedor_casa{
-        margin-top: -40px;
-        margin-bottom: 10px;
-    }
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');*{padding:0;margin:0;box-sizing:border-box;font-family:'Poppins',sans-serif}body{background-color:#9499a8}span,strong{color:#fff}.text-muted{font-size:.9rem}.card{-webkit-box-shadow:0 1px 4px rgba(0,0,0,.3),0 0 40px #0000001a inset;-moz-box-shadow:0 1px 4px rgba(0,0,0,.3),0 0 40px rgba(0,0,0,.1) inset;box-shadow:0 1px 4px rgba(0,0,0,.3),0 0 40px rgba(0,0,0,.1) inset}.sombraTotales{box-shadow:0 0 0 2px rgba(0,0,0,.5),0 2px 4px rgba(0,0,0,.1),0 4px 8px rgba(0,0,0,.1),0 8px 16px rgba(0,0,0,.1)}.sombraParcial{box-shadow:-5px -5px 9px rgba(255,255,255,.45),5px 5px 9px rgba(94,104,121,.3)}.titulos{font-size:1rem!important}.centrarSubtitulos{display:flex;justify-content:center}.subtitulos{font-size:.8rem!important;text-align:center;margin-bottom:.2rem}.bajarPequeno{margin-bottom:.5rem}.entradas{font-size:.8rem}.badge{font-size:.5em}.botones{width:100%}.botonEditar,.botonBorrar{width:2rem!important;height:2rem}.botonCancelar{margin-bottom:.5rem}.bot{font-size:.9rem!important}.list-group{font-size:.9rem!important}.movimientos{font-size:1rem;text-align:center;margin-top:1rem}.fondoTotalDiario{background-color:bisque}.fondoTotalGlobal{background-color:#9E1F1F}.captchaOpcionesContenedor{margin-top:1rem;display:flex;justify-content:center}.captchaAgregarContenedor{width:100%;display:flex;justify-content:center;align-items:center}.contenedor_casa{width:100%;display:flex;justify-content:center;margin-top:-35px;margin-bottom:10px}.casa{width:25px;height:25px;background:linear-gradient(180deg,#c32828b6,#9E1F1F);box-shadow:inset -8px 0 8px rgba(0,0,0,.15),inset 0 -8px 8px rgba(0,0,0,.25),0 0 0 2px rgba(0,0,0,.75),10px 20px 25px rgba(0,0,0,.4);color:#fff;user-select:none;cursor:pointer;font-weight:400;border-radius:10px;padding:5px}.casa:hover{color:#000}@media (min-width:565px){.logo{font-size:3rem}.text-muted{font-size:1.5rem}.contenedor_casa{margin-top:-55px;margin-bottom:10px}.casa{width:35px;height:35px;padding:5px}.titulos{font-size:1.5rem!important}.centrarSubtitulos{display:flex;justify-content:left}.subtitulos{font-size:1.2rem!important;text-align:left;width:100%;margin-bottom:.5rem}.bajarPequeno{margin-bottom:0}.entradas{font-size:1.1rem}.fecha{padding-bottom:3.4rem}.botones{width:7.5rem;font-size:1.2rem}.badge{font-size:1.2rem}.botonEditar,.botonBorrar{width:2.5rem!important;height:2.5rem}.actualizarContenedor{width:100%;display:flex;justify-content:space-between;align-items:center}.botonCancelar,.botonActualizar{height:2.5rem}.botonCancelar{margin-top:.55rem}.bot{font-size:1.2rem!important}.movimientos{font-size:1.3rem}.captchaOpcionesContenedor{display:flex;justify-content:start;width:50%}.botonGuardarContenedor{display:flex;justify-content:end;align-items:center;width:50%}.captchaAgregarContenedor{display:flex;justify-content:start;width:50%}.botonAgregarContenedor{display:flex;justify-content:end;align-items:center;width:50%}}@media(max-height:500px) and (orientation:landscape){.contenedor_casa{margin-top:-40px;margin-bottom:10px}}
